[GTK] fix gtk_style_context_set_background deprecation https://bugs.webkit.org/show_bug.cgi?id=196912

Patch by Ludovico de Nittis <ludovico.denittis@collabora.com> on 2019-04-22
Reviewed by Carlos Garcia Campos.

Since gtk 3.18 gtk_style_context_set_background has been deprecated.
Backgrounds are not rendered in the UI process, so it can be
simply removed.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseRealize):

Canonical link: https://commits.webkit.org/211375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244500 268f45cc-cd09-0410-ab3c-d52691b4dbfc